--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  loading_animations: ^2.2.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
